# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: my-check.yml
formatters/: json.py  plain.py  stylish.py
gendiff/: __init__.py  gendiff.py  gendiff_help.py  generate_diff.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: file3.json  test_gendiff.py
